--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 SwissArmyTransformer>=0.4.9
+numpy==1.24.4
 transformers>=4.36.2
 xformers>=0.0.22
-torch>=2.1.0
 torchvision>=0.16.2
 spacy>=3.6.0
 pillow>=10.2.0
@@ -12,11 +12,12 @@ streamlit>=1.31.0
 timm>=0.9.12
 accelerate>=0.26.1
 pydantic>=2.6.0
+boto3==1.34.89
 
-# for openai demo
-openai>=1.16.0
-sse-starlette>=1.8.2
-fastapi>=0.110.1
-httpx>=0.27.0
-uvicorn>=0.29.0
-jsonlines>=4.0.0
+# # for openai demo
+# openai>=1.16.0
+# sse-starlette>=1.8.2
+# fastapi>=0.110.1
+# httpx>=0.27.0
+# uvicorn>=0.29.0
+# jsonlines>=4.0.0
